<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Suraksha</string>
    <string name="app_tag_name">Sevana Padhadi</string>
    <string name="app_full_name">Suraksha Sevana Padhadi</string>
    <string name="app_description">Run by: SYS Kooriyad</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="close">Close</string>

    <string name="action_settings">Settings</string>
    <string name="action_home_activity">Home</string>

    <!-- Strings related to register member -->
    <string name="title_register_member">Register Member</string>
    <string name="registration_successful">Registration Successful</string>

    <string name="pick_from_contacts">Pick from Contacts</string>
    <string name="listMembers">List Members</string>

    <string name="accountNumber">Account Number</string>
    <string name="name">Name</string>
    <string name="alias">Alias</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="father">Father</string>
    <string name="spouse">Spouse</string>
    <string name="occupation">Occupation</string>
    <string name="age">Age</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="nominee">Nominee</string>
    <string name="relation_with_nominee">Relation With Nominee</string>
    <string name="address_of_nominee">Address of Nominee</string>
    <string name="remarks">Remarks</string>
    <string name="created_at">Created at</string>
    <string name="updated_at">Updated at</string>
    <string name="account_closed">Account Closed</string>
    <string name="add_member">Add Member</string>

    <string name="name_is_required">Please enter the name</string>
    <string name="invalid_mobile_number">Invalid mobile number</string>
    <string name="member_registered_sms">Welcome to Digital Suraksha Sevana Padhadi.</string>

    <!-- Strings related to edit member -->
    <string name="title_Edit_member">Edit Member</string>
    <string name="updated_successfully">Updated Successfully</string>

    <string name="loan_issued_successfully">Loan Issued Successfully</string>


    <!-- Strings related to create account -->
    <string name="opening_balance">Opening Balance</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="create_account">Create Account</string>
    <string name="add_account">Add Account</string>
    <string name="account_created_sms">New account created for you in Suraksha Sevana Padhadi.</string>

    <string name="deposit_success">Deposit Success</string>
    <string name="deposit_failed">Deposit Failed</string>


    <string name="search_title">Search</string>
    <string name="search_hint">Search name or account number</string>

    <string name="title_create_officer">Create Officer</string>
    <string name="title_edit_officer">Edit Officer</string>
    <string name="username_is_required">Please enter username</string>
    <string name="username_already_exist">Username already exist</string>
    <string name="password_is_required">Please enter pin</string>
    <string name="pin_should_be_a_number">Pin should be a number</string>
    <string name="pin_should_be_minimum_4_digits">Pin should have at least 4 digits</string>
    <string name="officer_creation_successful">New Officer Created</string>
    <string name="officer_updated_successfully">Officer Details Updated Successfully</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Pin</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This pin is incorrect</string>
    <string name="username_field_required">Username cannot be blank</string>
    <string name="pin_field_required">Pin should not be blank</string>

    <!-- Strings related to MemberDetailActivity -->
    <string name="edit">Edit</string>

    <string name="please_enter_member_name">Please enter member name</string>
    <string name="title_member_list">Members</string>
    <string name="title_member_detail">Member Detail</string>
    <string name="title_account_detail">Account Detail</string>
    <string name="title_officer_list">Officers</string>
    <string name="title_loan_issue">Issue Loan</string>
    <string name="title_deposit">Deposit</string>

    <string name="member_search_hint">Enter Name or Account Number</string>


    <string name="format_rupees">\u20B9<xliff:g id="rupee">%1.00f</xliff:g></string>


    <!--FontAwsome Icons-->
    <string name="fa_ic_calendar">&#xf073;</string>
    <string name="fa_ic_member_details">&#xf2bb;</string>
    <string name="fa_ic_member_add">&#xf234;</string>
    <string name="fa_ic_reports">&#xf298;</string>
    <string name="fa_ic_officer">&#xf27e;</string>
    <string name="fa_ic_lock">&#xf023;</string>
    <string name="fa_ic_debug">&#xf188;</string>

    <!--Material Icons-->
    <string name="md_ic_calendar">&#xf332;</string>
    <string name="md_ic_member_details">&#xf20e;</string>
    <string name="md_ic_member_add">&#xf1ff;</string>
    <string name="md_ic_reports">&#xf131;</string>
    <string name="md_ic_officer">&#xf18d;</string>
    <string name="md_ic_lock">&#xf190;</string>
    <string name="md_ic_debug">&#xf120;</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- For labelling yesterdays's forecast [CHAR LIMIT=15] -->
    <string name="yesterday">Yesterday</string>


    <string name="title_activity_daily_transaction">DailyTransactionActivity</string>

    <string name="title_settings">Settings</string>
    <string name="title_activity_txn_report">Transactions</string>

    <string name="amount_cannot_be_that_small">Amount cannot be that small</string>
    <string name="enter_a_valid_amount">Please enter a valid amount</string>
    <string name="enter_a_valid_number">Please enter a valid number</string>
    <string name="security_member_cannot_be_empty">Please select a security member</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>


    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for SMS -->
    <string name="pref_header_sms">SMS</string>

    <!-- Example settings for Loan -->
    <string name="pref_header_loan">Loan</string>
    <string name="pref_title_loan_instalment_times">Default Loan Instalment Times</string>
    <string name="pref_title_default_loan_issue_date">Default Loan Issue Date</string>
    <string name="pref_title_default_loan_return_date">Default Loan Return Date</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_avatar">Image</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="member_image">Member Image</string>
    <string name="issue_loan">Issue Loan</string>
    <string name="loan_issued">Loan Issued</string>
    <string name="loan_return">Loan Return</string>
    <string name="pending_loan_return">Pending Loan Return</string>
    <string name="instalment">Instalment</string>
    <string name="deposit">Deposit</string>
    <string name="pending_deposit">Pending Deposit</string>
    <string name="deposits">Deposits</string>
    <string name="pending_summery">Pending Summery</string>
    <string name="make_deposit">Make Deposit</string>
    <string name="loans">Loans</string>
    <string name="date">Date</string>
    <string name="title_loan_return">Loan Return</string>
    <string name="title_loan_returned">Loan Returned</string>
    <string name="title_activity_account_summery">Account Summery</string>
    <string name="send_reminder">Send Reminder</string>


    <string name="title_daily">Daily</string>
    <string name="title_monthly">Monthly</string>
    <string name="title_yearly">Yearly</string>

    <string name="update_loan_return">Update Loan Return</string>
    <string name="loan_issue_edit_note"><b>Note: </b>This Loan has loan returns. You may delete loan returns first to edit <b>issued date</b>, <b>loan amount</b> or <b>instalment times</b>. </string>
    <string name="close_account_note"><b>Note: </b>Account will be closed and you cannot undo this action or reopen the account later. You can view the deposits and loans, but you cannot edit or delete any of them. </string>
    <string name="title_loan_issued">Loan Issued</string>
    <string name="default_deposit_date">Default Deposit Date</string>
    <string name="delete">Delete</string>
    <string name="title_activity_report">Reports</string>
    <string name="user_image">user image</string>
    <string name="username">Username</string>
    <string name="clear">clear</string>

</resources>
