<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="48dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageviewAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="Add Photo"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_default_avatar"
                app:layout_collapseMode="parallax"
                app:layout_scrollFlags="scroll|enterAlways" />

            <ProgressBar
                android:id="@+id/avatarProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/text_above_avatar_bg_gradient"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/register_member_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:accessibilityLiveRegion="polite"
                    android:text="@string/accountNumber"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvAccountNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:accessibilityLiveRegion="polite"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="10"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/alias">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtAlias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/father">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtFather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/spouse">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtSpouse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/rgpGender"
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdoMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:hint="@string/male"
                    android:text="Male" />

                <RadioButton
                    android:id="@+id/rdoFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/female"
                    android:text="Female" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/occupation">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtOccupation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nominee">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtNominee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spnRelationWithNominee"
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:spinnerMode="dialog" />

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_of_nominee">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtAddressOfNominee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remarks">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/txtRemarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/accept_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:text="I accept terms and conditions of suraksha" />

            <LinearLayout
                android:id="@+id/RegistrationFeeLinearLayout"
                style="@style/Suraksha.InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_very_tiny"
                    android:accessibilityLiveRegion="assertive"
                    android:focusable="false"
                    android:text="Registration Fee" />

                <TextView
                    android:id="@+id/tvRegistrationFee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:accessibilityLiveRegion="assertive"
                    android:focusable="false"
                    android:fontFamily="sans-serif-condensed"
                    android:text="322"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAddMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/touch_selector_yellow"
                android:contentDescription="Add Member"
                android:focusable="true"
                android:text="@string/add_member" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>