<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg_gradient"
    tools:context="com.razikallayi.suraksha.LoginActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bismillah_image"
                android:layout_margin="@dimen/spacing_very_tiny"
                android:padding="@dimen/spacing_tiny"
                android:contentDescription="Bismillahi rahmani raheem"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/suraksha_logo_name"
                android:layout_margin="@dimen/spacing_very_tiny"
                android:contentDescription="@string/app_full_name"
                android:padding="@dimen/spacing_large"
                />


            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email">
                <TextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-thin"
                    android:textSize="@dimen/font_huge"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/font_larger"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:fontFamily="sans-serif-light"
                    android:textSize="@dimen/font_larger"
                    android:textColor="@color/white"
                    android:inputType="numberPassword"
                    android:maxLines="1"
                    android:maxLength="4"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                android:id="@+id/sign_out_button"
                style="?android:borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/gray_light"
                android:text="@string/action_sign_out" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/action_sign_in" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>